Dark mode and fixed controls

--- a/public/Kaleidoscope/styles.css
+++ b/public/Kaleidoscope/styles.css
@@ -7,6 +7,15 @@
     --translateScale: calc(0.5*(var(--scale) + 1));
 }
 
+[data-theme="dark"] {
+    --theme-background: #000000;
+    --theme-font: #ffffff;
+}
+[data-theme="light"] {
+    --theme-background: #ffffff;
+    --theme-font: #000000;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -17,7 +26,7 @@ body {
     width: 100vw;
     height: 100dvh;
     padding: 20px;
-    /* background-color: black; */
+    background-color: var(--theme-background);
     
     display: flex;
     justify-content: center;
@@ -31,15 +40,15 @@ body {
     flex-direction: column;
     gap: 25px;
     padding: 20px;
-    background: white; /* Matching the black theme */
-    color: black;
-    border: 2px solid black;
+    background: transparent; /* Matching the black theme */
+    color: var(--theme-font);
+    border: 2px solid var(--theme-font);
     border-radius: 15%;
     font-family: sans-serif;
     max-width: 300px;
 }
 
-label {
+label, button {
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -87,16 +96,27 @@ input[type="range"]::-webkit-slider-thumb {
 input[type="range"]::-moz-range-thumb {
     border: none;
     border-radius: 0;
-    background-color: #fff;
+    background-color: var(--theme-background);
     height: 24px;
     width: 12px;
-    border: 1px solid #000;
+    border: 1px solid var(--theme-font);
 }
 
 /* Hover & Active States */
 input[type="range"]:hover::-webkit-slider-thumb {
     background-color: #ccc; /* Subtle feedback */
 }
+
+#darkLightMode {
+    padding: 10px;
+    border-radius: 20px;
+    background-color: transparent;
+    border: 2px solid var(--theme-font);
+    color: var(--theme-font)
+}
+/* #darkLightMode:hover {
+    background-color: rgb(237, 237, 237);
+} */
 
 #box {
     position: relative;
@@ -132,7 +152,7 @@ input[type="range"]:hover::-webkit-slider-thumb {
     border-radius: 50%;
     opacity: 1;
     /* border: 1px solid black; */
-    box-shadow: inset 0 0 30px 50px white;
+    box-shadow: inset 0 0 30px 50px var(--theme-background);
 }
 
 .colorSquare {
